# Arclight

./: .gitkeep  Cargo.toml  README.md  test.arl
.github/ISSUE_TEMPLATE/: i-want-to-join.md
.github/workflows/: rust.yml
spec/examples/: calculator.arl  fibonacci.arc  hello_world.arl
spec/lang/: FileStructure.drawio  README.md  arclight.yml.md  classes.md  data_types.md  definitions.md  enums.md  generics.md  imports.md  interfaces.md  lambdas.md  metaprogramming.md  modules.md  operators.md  references.md
spec/std/: README.md
spec/std/conversion/: README.md
spec/std/io/: README.md
spec/std/math/: README.md
src/: main.rs
src/compiler/: compiler.rs
src/lexer/: mod.rs
src/parser/: macros.rs  mod.rs  parser.rs
src/parser/expressions/: basic_expression.rs  block_expression.rs  data_types.rs  function_expression.rs  import_expression.rs  literal_expression.rs  math_expression.rs  mod.rs  scope.rs  value_expression.rs  variable_definition_expression.rs  variable_expression.rs
src/utils/: error.rs  mod.rs
src/utils/error_components/: mod.rs  name_component.rs  token_component.rs
